--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "main": "index.js",
   "author": "sunandbean <sunbin.vincent.kim@gmail.com>",
   "license": "MIT",
-  "scripts":{
-    "start": "node index.js",
-    "prestart": "tsc"
+  "scripts": {
+    "start": "tsc-watch --onSuccess \"node dist/index.js\""
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.23",
+    "ts-node": "^10.7.0",
+    "tsc-watch": "^5.0.3",
+    "typescript": "^4.6.3"
   }
 }
